src/objects/Assumptions__c.object
<CustomObject>
    <fields>
        <fullName>Alternatives__c</fullName>
        <inlineHelpText>Please specify any alternatives of the assumption.</inlineHelpText>
        <label>Alternatives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Boundaries__c</fullName>
        <inlineHelpText>Please fill in the boundary range of the assumption.</inlineHelpText>
        <label>Boundaries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Update__c</fullName>
        <label>Frequency of Update</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less frequent than annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <inlineHelpText>Please fill in the purpose of the assumption.</inlineHelpText>
        <label>Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>Please fill in the source of the assumption and attach the source materials to the Notes &amp; Attachment section below.</inlineHelpText>
        <label>Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stress_Conditions__c</fullName>
        <inlineHelpText>Please specify the stress conditions of the assumption if there is any.</inlineHelpText>
        <label>Stress Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <inlineHelpText>Please fill in how the assumption is used or referred in the model.</inlineHelpText>
        <label>Use</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Assumption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assumption</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>